--- a/main.html
+++ b/main.html
@@ -8,7 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div class="card-container">
+		<img src="https://images.pexels.com/photos/207962/pexels-photo-207962.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="100%" style="">
+		<h2>Pricing Card</h2>
+		<p>
+			Rs:200
+		
+			 hggg  hhhh  hhhh hbhhhhh  jjjj hhh  hhh  hhh  hfddgh  hhh
+			
+		</p>
+		<button>Buy Now</button>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
